# KIVI

./: .gitignore  eval_long_bench.py  example.py  long_context_example.py  mem_spd_test.py  pred_long_bench.py  pyproject.toml  ruff.toml  save_kvcache.py
config/: model2maxlen.json
models/: llama_kivi.py  mistral_kivi.py
quant/: new_pack.py  test.py
scripts/: long_test.sh
utils/: process_args.py
vis/: vis.py
